// Vitest Snapshot v1

exports[`fit parser tests (Structured Workouts) > check test-1 1`] = `
{
  "course_points": [],
  "definitions": [
    {},
    {},
    {},
    {},
  ],
  "developer_data_ids": [],
  "device_infos": [],
  "devices": [],
  "dive_gases": [],
  "events": [],
  "field_descriptions": [],
  "file_creator": {
    "software_version": 1,
  },
  "file_ids": [
    {
      "manufacturer": 0,
      "product": 0,
      "serial_number": 665424,
      "time_created": 2022-06-12T12:51:18.000Z,
      "type": "workout",
    },
  ],
  "hrv": [],
  "laps": [],
  "lengths": [],
  "monitor_info": [],
  "monitors": [],
  "profileVersion": 2116,
  "protocolVersion": 32,
  "records": [],
  "sessions": [],
  "sports": [],
  "stress": [],
  "workout": {
    "num_valid_steps": 5,
    "sport": "running",
    "wkt_name": "testing",
  },
  "workout_step": [
    {
      "custom_target_value_high": 1309,
      "custom_target_value_low": 1278,
      "duration_type": "distance",
      "duration_value": 643736,
      "intensity": "warmup",
      "message_index": {
        "0": false,
        "reserved": false,
        "selected": false,
        "value": 0,
      },
      "target_type": "power",
      "target_value": 0,
    },
    {
      "custom_target_value_high": 1293,
      "custom_target_value_low": 1247,
      "duration_type": "time",
      "duration_value": 1800000,
      "intensity": "active",
      "message_index": {
        "0": false,
        "reserved": false,
        "selected": false,
        "value": 1,
      },
      "target_type": "power",
      "target_value": 0,
    },
    {
      "custom_target_value_high": 1247,
      "custom_target_value_low": 1231,
      "duration_type": "time",
      "duration_value": 900000,
      "intensity": "rest",
      "message_index": {
        "0": false,
        "reserved": false,
        "selected": false,
        "value": 2,
      },
      "target_type": "power",
      "target_value": 0,
    },
    {
      "duration_type": "repeat_until_steps_cmplt",
      "duration_value": 1,
      "intensity": undefined,
      "message_index": {
        "0": false,
        "reserved": false,
        "selected": false,
        "value": 3,
      },
      "target_type": "open",
      "target_value": 2,
    },
    {
      "custom_target_value_high": 1278,
      "custom_target_value_low": 1231,
      "duration_type": "time",
      "duration_value": 900000,
      "intensity": "cooldown",
      "message_index": {
        "0": false,
        "reserved": false,
        "selected": false,
        "value": 4,
      },
      "target_type": "power",
      "target_value": 0,
    },
  ],
}
`;

exports[`fit parser tests (Structured Workouts) > check test-2 1`] = `
{
  "course_points": [],
  "definitions": [
    {},
    {},
    {},
    {},
  ],
  "developer_data_ids": [],
  "device_infos": [],
  "devices": [],
  "dive_gases": [],
  "events": [],
  "field_descriptions": [],
  "file_creator": {
    "software_version": 1,
  },
  "file_ids": [
    {
      "manufacturer": 0,
      "product": 0,
      "serial_number": 666103,
      "time_created": 2022-06-12T12:51:10.000Z,
      "type": "workout",
    },
  ],
  "hrv": [],
  "laps": [],
  "lengths": [],
  "monitor_info": [],
  "monitors": [],
  "profileVersion": 2116,
  "protocolVersion": 32,
  "records": [],
  "sessions": [],
  "sports": [],
  "stress": [],
  "workout": {
    "num_valid_steps": 8,
    "sport": "running",
    "wkt_name": "W17Q2",
  },
  "workout_step": [
    {
      "custom_target_value_high": 1247,
      "custom_target_value_low": 1200,
      "duration_type": "distance",
      "duration_value": 643736,
      "intensity": "warmup",
      "message_index": {
        "0": false,
        "reserved": false,
        "selected": false,
        "value": 0,
      },
      "target_type": "power",
      "target_value": 0,
    },
    {
      "custom_target_value_high": 1355,
      "custom_target_value_low": 1309,
      "duration_type": "distance",
      "duration_value": 100000,
      "intensity": "active",
      "message_index": {
        "0": false,
        "reserved": false,
        "selected": false,
        "value": 1,
      },
      "target_type": "power",
      "target_value": 0,
    },
    {
      "duration_type": "time",
      "duration_value": 180000,
      "intensity": "rest",
      "message_index": {
        "0": false,
        "reserved": false,
        "selected": false,
        "value": 2,
      },
      "target_type": "open",
    },
    {
      "duration_type": "repeat_until_steps_cmplt",
      "duration_value": 1,
      "intensity": undefined,
      "message_index": {
        "0": false,
        "reserved": false,
        "selected": false,
        "value": 3,
      },
      "target_type": "open",
      "target_value": 5,
    },
    {
      "custom_target_value_high": 1401,
      "custom_target_value_low": 1355,
      "duration_type": "distance",
      "duration_value": 40000,
      "intensity": "active",
      "message_index": {
        "0": false,
        "reserved": false,
        "selected": false,
        "value": 4,
      },
      "target_type": "power",
      "target_value": 0,
    },
    {
      "duration_type": "distance",
      "duration_value": 40000,
      "intensity": "rest",
      "message_index": {
        "0": false,
        "reserved": false,
        "selected": false,
        "value": 5,
      },
      "target_type": "open",
    },
    {
      "duration_type": "repeat_until_steps_cmplt",
      "duration_value": 4,
      "intensity": undefined,
      "message_index": {
        "0": false,
        "reserved": false,
        "selected": false,
        "value": 6,
      },
      "target_type": "open",
      "target_value": 4,
    },
    {
      "custom_target_value_high": 1247,
      "custom_target_value_low": 1200,
      "duration_type": "distance",
      "duration_value": 321868,
      "intensity": "cooldown",
      "message_index": {
        "0": false,
        "reserved": false,
        "selected": false,
        "value": 7,
      },
      "target_type": "power",
      "target_value": 0,
    },
  ],
}
`;
